增强宿舍查询功能